--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "lib/openzeppelin/contracts"]
 	path = lib/openzeppelin/contracts
 	url = https://github.com/openzeppelin/contracts
+[submodule "lib/solmate"]
+	path = lib/solmate
+	url = https://github.com/transmissions11/solmate
