--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,4 @@ out = "out"
 libs = ["lib"]
 fs_permissions = [{ access = "read", path = "./src"}]
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+solc_version = "0.8.20"
