--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,6 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-fs_permissions = [{ access = "read", path = "./src"}]
+fs_permissions = [{ access = "read", path = "./src"},{ access = "read", path = "./out"}]
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 solc_version = "0.8.20"
